@@ -292,7 +292,6 @@ open_calendar (ECalBackendSync *backend, EDataCal *cal, gboolean only_if_exists,
 	ECalBackendExchange *cbex = E_CAL_BACKEND_EXCHANGE (backend);
 	const char *uristr;
 	ExchangeHierarchy *hier;
-	ExchangeAccount *act;
 	ExchangeAccountResult acresult;
 	const char *prop = PR_ACCESS;
 	E2kHTTPStatus status;
@@ -332,15 +331,14 @@ open_calendar (ECalBackendSync *backend, EDataCal *cal, gboolean only_if_exists,
 		
 	/* Make sure we have an open connection */
 	/* This steals the ExchangeAccount from ExchangeComponent */
-	act = exchange_component_get_account_for_uri (global_exchange_component, NULL);
-	if (!exchange_account_get_context (act)) {
-		if (!exchange_account_connect (act, password, &acresult)) {
+	cbex->account = exchange_component_get_account_for_uri (global_exchange_component, uristr);
+	if (!exchange_account_get_context (cbex->account)) {
+		if (!exchange_account_connect (cbex->account, password, &acresult)) {
 			g_mutex_unlock (cbex->priv->open_lock);
 			return GNOME_Evolution_Calendar_AuthenticationFailed;
 		}
 	}
 
-	cbex->account = exchange_component_get_account_for_uri (global_exchange_component, uristr);
 	if (!cbex->account) {
 		g_mutex_unlock (cbex->priv->open_lock);
 		return GNOME_Evolution_Calendar_PermissionDenied;
